# gcreplay

./: .gitattributes  .gitignore  20241215Metadata.csv  404.html  GC-metadata.csv  README.md  beast.nf  gc_metadata.csv  index.html  main.nf  metadata.PR1.csv  metadata.PR2.csv  metadata.PR2.txt  metadata.csv  mkdocs.yml  modules.nf  nextflow.config  ngs_manifest.csv  notebook_structure.json  pixi.toml  pyproject.toml  reindex_mapping.csv  simulations.nf  smartseq.nf
MIGRATED_FROM_Ab-CGGnaive_DMS/: .gitattributes
analysis/: 10x.ipynb  11a_counts_by_base.csv  220331.2_Variants_to_produce.csv  8a_counts_by_base.csv  9a_counts_by_base.csv  DMS-Vs-BLI.ipynb  LB_testing.ipynb  NDS-LB.ipynb  NDS-LBI.ipynb  NDS_LBI.ipynb  OctetFabs.csv  Prep-DMS-Octet.ipynb  Prep_GE_modeling_data.ipynb  README.md  RNAseq.ipynb  Untitled.ipynb  aa-1st-passage-times.ipynb  additive-validation-design.ipynb  affinity-fitness-response.ipynb  affinity-fitness.ipynb  affinity_colorscale.py  affinity_quantiles.ipynb  aggregate_mut_freqs.ipynb  around-deleted-corrected.fasta  beast-trajectories.ipynb  cell-summaries.ipynb  cell-summary.ipynb  compare-mut-freq.ipynb  data  dms_variants_fitting.ipynb  dynamics.py  env.yaml  env2.yaml  epistasis-affinity.ipynb  first-step.ipynb  fitness-regression.ipynb  gcdyn-plot.py  gctrees-env.yml  igh_passenger_aggregate.ipynb  igk_passenger_aggregate.ipynb  (+29 more)
beast_sandbox/: observed_to_fasta.py
docker/: Dockerfile  Dockerfile-analysis-notebooks  README.md
docs/: index.md  key-files.md  pipeline-details.md  stacked_trees  supplementary-overview.md  (+1 more)
(+5421 files in other folders)
